--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^1.1",
+        "spatie/laravel-fractal": "^5.6"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
